# swarm-clf-cbf-playground

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py  setup.py
config/: base.yaml  default.yaml
config/controller/: cbf.yaml  connectivity.yaml  mpc.yaml  nominal.yaml  solver.yaml
config/experiment/: 3d_default.yaml  default.yaml
config/sim/: default.yaml
config/viz/: live.yaml  record.yaml
config/world/: 2d_lanes.yaml  3d_box.yaml
scripts/controllers/: __init__.py  admm_engine.py  base_qp.py  dynamics.py  mpc_layer.py  network.py  safety_filter.py  state_manager.py
scripts/controllers/cbf/: ecbf.py  gp_learner.py
scripts/controllers/constraints/: __init__.py  builders.py  manager.py
scripts/controllers/nominal/: clf_progress.py  pd_tracking.py  potential_fields.py
scripts/controllers/policies/: connectivity.py  nominal.py
scripts/controllers/solvers/: admm_engine.py  interface.py  wrapper.py
scripts/rl/: README.md  agent.py  environment.py  evaluate.py  rl_utils.py  train.py
scripts/utils/: animator.py  config.py  geometry.py  sim_engine.py  stepper.py  visualization.py
scripts/world/: environment.py  physics.py
src/swarm_playground/: run.py
src/swarm_playground/controllers/: __init__.py  dynamics.py  network.py  safety_filter.py
src/swarm_playground/controllers/cbf/: __init__.py  gp_learner.py
src/swarm_playground/rl/: README.md  agent.py  environment.py  evaluate.py  rl_utils.py  train.py
src/swarm_playground/utils/: config.py  geometry.py  logger.py  sim_engine.py  stepper.py
(+4 files in other folders)
